# authserver

./: README.md  app.py  config.py  models.py  pyproject.toml  serve.sh
.github/workflows/: telegram-notify.yml
db/: test.sqlite
